--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,14 +1,3 @@
-.mp-img-container {
-    height: 150px;
-    width: 150px;
-    overflow: hidden;
-    border: 1px solid;
-    border-radius: 50%;
-    margin-top: 1rem;
-}
-
-.mp-img {
-    position: relative;
-    top: -10px;
-    width: 150px;
-}
+@import "variables";
+@import "images";
+@import "colors"
