event listeners working

--- a/src/scss/_spin.scss
+++ b/src/scss/_spin.scss
@@ -1,3 +1,5 @@
+/* Spinkit courtesy of http://tobiasahlin.com/spinkit/ */
+
 .sk-circle {
     margin: 200px auto;
     width: 80px;
@@ -19,7 +21,7 @@
     margin: 0 auto;
     width: 15%;
     height: 15%;
-    background-color: red;
+    background-color: slategray;
     border-radius: 100%;
     -webkit-animation: sk-circleBounceDelay 1.2s infinite ease-in-out both;
     animation: sk-circleBounceDelay 1.2s infinite ease-in-out both;
