--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,4 +2,6 @@
 @import "images";
 @import "colors";
 @import "spin";
-@import "display"
+@import "display";
+@import "type";
+@import "margin_padding"
