emojis for modal :o

--- a/src/scss/_bs_tweaks.scss
+++ b/src/scss/_bs_tweaks.scss
@@ -4,3 +4,14 @@
 
 // .btn-outline-success:hover {
 // }
+.em {
+    height: 21px !important;
+    width: 21px !important;
+}
+
+// .pull-right {
+//     float: right;
+// }
+.modal-content {
+    padding: 1rem;
+}
