--- a/src/scss/_type.scss
+++ b/src/scss/_type.scss
@@ -1,3 +1,7 @@
+a {
+    color: #292b2c;
+}
+
 .own-debate {
     background: yellow;
 }
@@ -13,11 +17,6 @@
 
 .debate-context {
     color: dimgray;
+    background: lightcyan;
     font-size: .8rem;
-}
-
-.additional-entries {
-    font-size: 0.85rem;
-    font-variant: small-caps;
-    color: darkgrey;
 }
