chart colors + size ok, phew

--- a/src/scss/_charts.scss
+++ b/src/scss/_charts.scss
@@ -2,3 +2,10 @@
 //     width: 50%;
 //     height: 50%;
 // }
+.ct-chart-bar {
+    height: 75vh !important;
+}
+
+.ct-perfect-fourth:before {
+    padding-bottom: 0 !important;
+}
