--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -33,3 +33,51 @@
 .border-- {
     border-color: $WILD;
 }
+
+
+/*Colors for chart bars
+*/
+
+.bar-man {
+    stroke: $KD
+}
+
+.bar-kvinna {
+    stroke: $V
+}
+
+.bar-M {
+    stroke: $M;
+}
+
+.bar-S {
+    stroke: $S;
+}
+
+.bar-V {
+    stroke: $V;
+}
+
+.bar-MP {
+    stroke: $MP;
+}
+
+.bar-SD {
+    stroke: $SD;
+}
+
+.bar-C {
+    stroke: $C;
+}
+
+.bar-L {
+    stroke: $L;
+}
+
+.bar-KD {
+    stroke: $KD;
+}
+
+.bar-- {
+    stroke: $WILD;
+}
