--- a/src/scss/_charts.scss
+++ b/src/scss/_charts.scss
@@ -9,3 +9,8 @@
 .ct-perfect-fourth:before {
     padding-bottom: 0 !important;
 }
+
+.ct-label {
+    font-size: 0.75em !important;
+    color: #292b2c !important;
+}
