progress bar on load screen + restruc html

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,3 +1,4 @@
+//party colors
 $S: #EE2020;
 $V: #B00000;
 $MP: #53A045;
@@ -7,3 +8,6 @@ $L: #0069B4;
 $KD: #2D338E;
 $SD: #FBC700;
 $WILD: #DDDDDD;
+//others
+$pastel-blue: RGB(176, 198, 206);
+$pastel-blue-transparent: RGBA(176, 198, 206, 0.8)
