--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,7 +1,7 @@
 @import "variables";
 @import "images";
 @import "colors";
-@import "spin";
+@import "loading";
 @import "display";
 @import "type";
 @import "margin_padding";
