--- a/src/scss/_display.scss
+++ b/src/scss/_display.scss
@@ -1,9 +1,9 @@
 .hidden {
-    display: none;
+    display: none !important;
 }
 
 .visible {
-    display: block;
+    display: flex !important;
 }
 
 .inline {
