--- a/src/scss/_bs_tweaks.scss
+++ b/src/scss/_bs_tweaks.scss
@@ -10,3 +10,10 @@
 .modal-content {
     padding: 1rem;
 }
+
+//jumbotron
+@media (min-width: 576px) {
+    .jumbotron {
+        padding: 1rem 1rem;
+    }
+}
