--- a/src/scss/_bs_tweaks.scss
+++ b/src/scss/_bs_tweaks.scss
@@ -1,3 +1,4 @@
+//menu
 .dropdown-menu {
     padding: 1rem;
 }
@@ -7,6 +8,7 @@
     width: 21px !important;
 }
 
+//modal
 .modal-content {
     padding: 1rem;
 }
