--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,6 +1,7 @@
 //party colors
 $S: #EE2020;
 $V: #B00000;
+$V-background: rgba(176, 0, 0, 0.1);
 $MP: #53A045;
 $M: #52BDEC;
 $C: #016A3A;
@@ -10,4 +11,5 @@ $SD: #FBC700;
 $WILD: #DDDDDD;
 //others
 $pastel-blue: RGB(176, 198, 206);
-$pastel-blue-transparent: RGBA(176, 198, 206, 0.8)
+$pastel-blue-transparent: RGBA(176, 198, 206, 0.8);
+$pastel-blue-lighter: #D8E3E7;
