--- a/src/scss/_images.scss
+++ b/src/scss/_images.scss
@@ -1,12 +1,13 @@
 .mp-img-container {
-    height: 80px;
-    width: 80px;
+    height: 85px;
+    width: 85px;
     overflow: hidden;
     border: 2px solid;
     border-radius: 50%;
     margin-top: 1rem;
     position: absolute;
-    top: -30px;
+    top: -25px;
+    box-shadow: -4px -5px 10px 0px rgba(0, 0, 0, 0.04);
 }
 
 .mp-img {
