tr bg-color + dateline

--- a/src/scss/_bs_tweaks.scss
+++ b/src/scss/_bs_tweaks.scss
@@ -3,6 +3,10 @@
     padding: 0.5rem;
 }
 
+.navbar-right {
+    margin-right: 3rem;
+}
+
 .em {
     height: 21px !important;
     width: 21px !important;
