--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -81,3 +81,40 @@
 .bar-- {
     stroke: $WILD;
 }
+
+//backgrounds
+.bg-S {
+    background: $bg-S;
+}
+
+.bg-V {
+    background: $bg-V;
+}
+
+.bg-MP {
+    background: $bg-MP;
+}
+
+.bg-M {
+    background: $bg-M;
+}
+
+.bg-C {
+    background: $bg-C;
+}
+
+.bg-L {
+    background: $bg-L;
+}
+
+.bg-KD {
+    background: $bg-KD;
+}
+
+.bg-SD {
+    background: $bg-SD;
+}
+
+.bg-- {
+    background: $bg-WILD;
+}
