--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,14 +1,22 @@
 //party colors
 $S: #EE2020;
+$bg-S: rgba(238, 32, 32, 0.1);
 $V: #B00000;
-$V-background: rgba(176, 0, 0, 0.1);
+$bg-V: rgba(176, 0, 0, 0.1);
 $MP: #53A045;
+$bg-MP: rgba(83, 160, 69, 0.1);
 $M: #52BDEC;
+$bg-M: rgba(82, 189, 236, 0.1);
 $C: #016A3A;
+$bg-C: rgba(1, 106, 58, 0.1);
 $L: #0069B4;
+$bg-L: rgba(0, 105, 180, 0.1);
 $KD: #2D338E;
+$bg-KD: rgba(45, 51, 142, 0.1);
 $SD: #FBC700;
+$bg-SD: rgba(251, 199, 0, 0.1);
 $WILD: #DDDDDD;
+$bg-WILD: rgba(221, 221, 221, 0.1);
 //others
 $pastel-blue: RGB(176, 198, 206);
 $pastel-blue-transparent: RGBA(176, 198, 206, 0.8);
