--- a/src/scss/_type.scss
+++ b/src/scss/_type.scss
@@ -24,3 +24,10 @@ a {
 .speech-header {
     font-weight: bold;
 }
+
+.lead-smaller {
+    font-size: 1rem;
+    font-weight: 300;
+    margin-top: .3rem;
+    float: right;
+}
