chart pages + about fixed

--- a/src/scss/_charts.scss
+++ b/src/scss/_charts.scss
@@ -6,6 +6,10 @@
     padding-bottom: 0 !important;
 }
 
+.ct-perfect-fourth>svg {
+    position: relative !important;
+}
+
 .ct-label {
     font-size: 0.75em !important;
     color: #292b2c !important;
