--- a/src/scss/_table.scss
+++ b/src/scss/_table.scss
@@ -17,6 +17,10 @@ td {
     border-right: 1px solid #eceeef;
 }
 
+.border-left {
+    border-left: 1px solid #eceeef;
+}
+
 .td-img {
     padding-right: 5rem !important;
 }
