--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -1,3 +1,4 @@
+//for filter
 .myButton {
     width: 50px;
     height: 50px;
@@ -253,4 +254,12 @@
 
 .btn-gr {
     display: flex;
+}
+
+//for modal
+#close-speech-btn {
+    @extend .btn-SD;
+    width: 100px;
+    height: 40px;
+    float: right;
 }
