--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -1,3 +1,17 @@
+a {
+    color: #292b2c;
+}
+
+//modal
+.own-debate {
+    background: #FFEE93;
+}
+
+.comeback-debate {
+    background: #FCF9DE;
+}
+
+//party colors
 .border-M {
     border-color: $M;
 }
