--- a/src/scss/_media_q.scss
+++ b/src/scss/_media_q.scss
@@ -34,6 +34,7 @@
     #gender-chart-section,
     #party-chart-section {
         padding-bottom: 56px;
+        margin-top: 2rem;
     }
     //prevents the nav items from breaking line
     .margin-left {
