--- a/src/scss/_charts.scss
+++ b/src/scss/_charts.scss
@@ -14,3 +14,10 @@
     font-size: 0.75em !important;
     color: #292b2c !important;
 }
+
+.half {
+    width: 50%;
+    @media screen and (max-width: 617px) {
+        width: 80%;
+    }
+}
