--- a/src/scss/_display.scss
+++ b/src/scss/_display.scss
@@ -14,3 +14,7 @@
 .justify-space-between {
     justify-content: space-between;
 }
+
+.justify-space-around {
+    justify-content: space-around;
+}
