--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -259,6 +259,7 @@
 //for modal
 #close-speech-btn {
     @extend .btn-SD;
+    border-radius: 10px;
     width: 100px;
     height: 40px;
     float: right;
