--- a/src/scss/_bs_tweaks.scss
+++ b/src/scss/_bs_tweaks.scss
@@ -21,6 +21,10 @@
     width: 21px !important;
 }
 
+.nav-item {
+    transition: all 0.5s ease;
+}
+
 //modal
 .modal-content {
     padding: 2rem;
